# trace-player

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_library.sql  002_add_file_index.sql  003_downloads.sql  004_watch_history.sql
src-tauri/nsis/: installer-hooks.nsh
src-tauri/resources/shaders/: README.txt
src-tauri/shell-extension/: Cargo.toml
src-tauri/shell-extension/src/: lib.rs
src-tauri/src/: agc.rs  archive.rs  commands.rs  dll_bootstrap.rs  events.rs  lib.rs  library.rs  log.rs  main.rs  perf.rs  player.rs  power.rs  smtc.rs  splash.rs  state.rs  streaming.rs  taskbar.rs  thumbnailer.rs  ytdlp.rs
src/components/: AppContextMenu.tsx  AppearancePanel.tsx  AuthRequiredModal.tsx  BufferingBanner.tsx  ControlBar.tsx  DevTester.tsx  ErrorBoundary.tsx  GestureLayer.tsx  JumpToTimeDialog.tsx  LoadingSourceOverlay.tsx  MediaInfoDialog.tsx  OpenSourceDialog.tsx  PipBar.tsx  PlaylistPanel.tsx  RecentSourcesPanel.tsx  SubtitleSettingsPanel.tsx  TitleBar.tsx  TitleBarContextMenu.tsx  types.ts
src/components/controls/: PlaybackButtons.tsx  Seek10Icon.tsx  Timeline.tsx  VolumeControl.tsx
src/components/controls/settings/: AppearanceBarSizePage.tsx  AppearancePage.tsx  AppearanceSeekBarPage.tsx  AppearanceThemePage.tsx  AudioDevicePage.tsx  AudioFxPage.tsx  AudioMainPage.tsx  AudioTrackPage.tsx  DynamicAudioPage.tsx  HdrPage.tsx  ImagePage.tsx  InterpolationPage.tsx  MainPage.tsx  PerformancePage.tsx  SettingsMenu.tsx  SettingsPage.tsx  SpeedPage.tsx  SubtitlesPage.tsx  UpscalingPage.tsx  VideoAdjustPage.tsx  VideoAppearancePage.tsx  VideoMainPage.tsx  VideoQualityPage.tsx  VideoResolutionPage.tsx  VideoSourcePage.tsx  shared.tsx
src/components/subtitle/: ColorPicker.tsx  DelaySection.tsx  PresetGrid.tsx  StyleControls.tsx  presets.ts
src/components/ui/: RangeSlider.tsx  Toggle.tsx
src/hooks/: useTheme.ts
src/lib/: log.ts
