[package]
name = "trace-player"
version = "1.0.0"
description = "Trace Player — modern desktop video player"
authors = ["krishnesh"]
edition = "2021"

[lib]
name = "media_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
mimalloc = { version = "0.1", default-features = false }
ureq = { version = "2", features = ["json", "tls"] }
# Archive support (Slice 3): zip is pure Rust, sevenz-rust is pure Rust;
# unrar wraps the upstream UnRAR C lib (vendored). All three feed a shared
# trait in archive.rs so the lazy-extract + LRU code is format-agnostic.
# TODO: upgrade to zip 2.x (current stable) — API changed (ZipArchive::new,
# by_index return types differ); needs archive.rs refactor.
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sevenz-rust = "~0.6"
unrar = "~0.5"
filetime = "0.2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Media",
    "Media_Playback",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# Aggressive release profile — LTO + single codegen unit unlock cross-crate
# inlining (~10-15% perf), strip removes debug sections (~30% smaller binary),
# panic=abort drops the unwind landing pads (smaller binary, slightly faster).
# incremental=false is required for fat LTO to actually do its job.
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
incremental = false
