[package]
name = "trace-player-shellext"
version = "1.0.2"
edition = "2021"
description = "Windows Shell thumbnail provider for Trace Player video files"

[lib]
name = "trace_player_shellext"
crate-type = ["cdylib"]

[dependencies]
sha1 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
] }
windows-core = "0.58"

# Loaded in-process by explorer.exe — every byte counts. Size-optimized
# profile keeps the .dll tiny so it doesn't bloat every Explorer instance.
[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false
